Added start and end dates of the week to the endpoint that sends the shift information of the week
